// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test Monitor should display uploading when has upload progress 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 0px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="react-draggable"
              style="min-width: min(520px, 95vw); transform: translate(0px, 0px)translate(0px,0px);"
            >
              <div
                class="ant-modal-content"
              >
                <button
                  aria-label="Close"
                  class="ant-modal-close"
                  type="button"
                >
                  <span
                    class="ant-modal-close-x"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close ant-modal-close-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        fill-rule="evenodd"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <div
                  class="ant-modal-header"
                >
                  <div
                    class="ant-modal-title"
                    id="test-id"
                  >
                    <div
                      style="cursor: move; width: 100%;"
                    >
                      device - uploading
                    </div>
                  </div>
                </div>
                <div
                  class="ant-modal-body"
                >
                  <div
                    class="ant-tabs ant-tabs-top css-dev-only-do-not-override-hash"
                  >
                    <div
                      aria-orientation="horizontal"
                      class="ant-tabs-nav"
                      role="tablist"
                    >
                      <div
                        class="ant-tabs-nav-wrap"
                      >
                        <div
                          class="ant-tabs-nav-list"
                          style="transform: translate(0px, 0px);"
                        >
                          <div
                            class="ant-tabs-tab"
                            data-node-key="WORKING"
                          >
                            <div
                              aria-controls="rc-tabs-test-panel-WORKING"
                              aria-selected="false"
                              class="ant-tabs-tab-btn"
                              id="rc-tabs-test-tab-WORKING"
                              role="tab"
                              tabindex="-1"
                            >
                              <div>
                                <span
                                  aria-label="picture"
                                  class="anticon anticon-picture icon"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="picture"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 632H136v-39.9l138.5-164.3 150.1 178L658.1 489 888 761.6V792zm0-129.8L664.2 396.8c-3.2-3.8-9-3.8-12.2 0L424.6 666.4l-144-170.7c-3.2-3.8-9-3.8-12.2 0L136 652.7V232h752v430.2zM304 456a88 88 0 100-176 88 88 0 000 176zm0-116c15.5 0 28 12.5 28 28s-12.5 28-28 28-28-12.5-28-28 12.5-28 28-28z"
                                    />
                                  </svg>
                                </span>
                                taskTab
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-tabs-tab ant-tabs-tab-active"
                            data-node-key="FILE"
                          >
                            <div
                              aria-controls="rc-tabs-test-panel-FILE"
                              aria-selected="true"
                              class="ant-tabs-tab-btn"
                              id="rc-tabs-test-tab-FILE"
                              role="tab"
                              tabindex="0"
                            >
                              <div>
                                <span
                                  aria-label="folder"
                                  class="anticon anticon-folder icon"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="folder"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M880 298.4H521L403.7 186.2a8.15 8.15 0 00-5.5-2.2H144c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V330.4c0-17.7-14.3-32-32-32zM840 768H184V256h188.5l119.6 114.4H840V768z"
                                    />
                                  </svg>
                                </span>
                                label
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-tabs-tab"
                            data-node-key="CAMERA"
                          >
                            <div
                              aria-controls="rc-tabs-test-panel-CAMERA"
                              aria-selected="false"
                              class="ant-tabs-tab-btn"
                              id="rc-tabs-test-tab-CAMERA"
                              role="tab"
                              tabindex="-1"
                            >
                              <div>
                                <span
                                  aria-label="camera"
                                  class="anticon anticon-camera icon"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="camera"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M864 248H728l-32.4-90.8a32.07 32.07 0 00-30.2-21.2H358.6c-13.5 0-25.6 8.5-30.1 21.2L296 248H160c-44.2 0-80 35.8-80 80v456c0 44.2 35.8 80 80 80h704c44.2 0 80-35.8 80-80V328c0-44.2-35.8-80-80-80zm8 536c0 4.4-3.6 8-8 8H160c-4.4 0-8-3.6-8-8V328c0-4.4 3.6-8 8-8h186.7l17.1-47.8 22.9-64.2h250.5l22.9 64.2 17.1 47.8H864c4.4 0 8 3.6 8 8v456zM512 384c-88.4 0-160 71.6-160 160s71.6 160 160 160 160-71.6 160-160-71.6-160-160-160zm0 256c-53 0-96-43-96-96s43-96 96-96 96 43 96 96-43 96-96 96z"
                                    />
                                  </svg>
                                </span>
                                camera
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
                      >
                        <button
                          aria-controls="rc-tabs-test-more-popup"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          class="ant-tabs-nav-more"
                          id="rc-tabs-test-more"
                          style="visibility: hidden; order: 1;"
                          type="button"
                        >
                          <span
                            aria-label="ellipsis"
                            class="anticon anticon-ellipsis"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="ellipsis"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-tabs-extra-content"
                      >
                        <div>
                          Dummy MonitorTabExtraContent
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-tabs-content-holder"
                    >
                      <div
                        class="ant-tabs-content ant-tabs-content-top"
                      >
                        <div
                          aria-hidden="false"
                          aria-labelledby="rc-tabs-test-tab-FILE"
                          class="ant-tabs-tabpane ant-tabs-tabpane-active"
                          id="rc-tabs-test-panel-FILE"
                          role="tabpanel"
                          tabindex="0"
                        >
                          <div>
                            Dummy MonitorFilelist 
                            SD/test
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test Monitor should render correctly 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 0px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="react-draggable"
              style="min-width: min(520px, 95vw); transform: translate(0px, 0px)translate(0px,0px);"
            >
              <div
                class="ant-modal-content"
              >
                <button
                  aria-label="Close"
                  class="ant-modal-close"
                  type="button"
                >
                  <span
                    class="ant-modal-close-x"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close ant-modal-close-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        fill-rule="evenodd"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <div
                  class="ant-modal-header"
                >
                  <div
                    class="ant-modal-title"
                    id="test-id"
                  >
                    <div
                      style="cursor: move; width: 100%;"
                    >
                      device - undefined
                    </div>
                  </div>
                </div>
                <div
                  class="ant-modal-body"
                >
                  <div
                    class="ant-tabs ant-tabs-top css-dev-only-do-not-override-hash"
                  >
                    <div
                      aria-orientation="horizontal"
                      class="ant-tabs-nav"
                      role="tablist"
                    >
                      <div
                        class="ant-tabs-nav-wrap"
                      >
                        <div
                          class="ant-tabs-nav-list"
                          style="transform: translate(0px, 0px);"
                        >
                          <div
                            class="ant-tabs-tab"
                            data-node-key="WORKING"
                          >
                            <div
                              aria-controls="rc-tabs-test-panel-WORKING"
                              aria-selected="false"
                              class="ant-tabs-tab-btn"
                              id="rc-tabs-test-tab-WORKING"
                              role="tab"
                              tabindex="-1"
                            >
                              <div>
                                <span
                                  aria-label="picture"
                                  class="anticon anticon-picture icon"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="picture"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 632H136v-39.9l138.5-164.3 150.1 178L658.1 489 888 761.6V792zm0-129.8L664.2 396.8c-3.2-3.8-9-3.8-12.2 0L424.6 666.4l-144-170.7c-3.2-3.8-9-3.8-12.2 0L136 652.7V232h752v430.2zM304 456a88 88 0 100-176 88 88 0 000 176zm0-116c15.5 0 28 12.5 28 28s-12.5 28-28 28-28-12.5-28-28 12.5-28 28-28z"
                                    />
                                  </svg>
                                </span>
                                taskTab
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-tabs-tab ant-tabs-tab-active"
                            data-node-key="FILE"
                          >
                            <div
                              aria-controls="rc-tabs-test-panel-FILE"
                              aria-selected="true"
                              class="ant-tabs-tab-btn"
                              id="rc-tabs-test-tab-FILE"
                              role="tab"
                              tabindex="0"
                            >
                              <div>
                                <span
                                  aria-label="folder"
                                  class="anticon anticon-folder icon"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="folder"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M880 298.4H521L403.7 186.2a8.15 8.15 0 00-5.5-2.2H144c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V330.4c0-17.7-14.3-32-32-32zM840 768H184V256h188.5l119.6 114.4H840V768z"
                                    />
                                  </svg>
                                </span>
                                label
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-tabs-tab"
                            data-node-key="CAMERA"
                          >
                            <div
                              aria-controls="rc-tabs-test-panel-CAMERA"
                              aria-selected="false"
                              class="ant-tabs-tab-btn"
                              id="rc-tabs-test-tab-CAMERA"
                              role="tab"
                              tabindex="-1"
                            >
                              <div>
                                <span
                                  aria-label="camera"
                                  class="anticon anticon-camera icon"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="camera"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M864 248H728l-32.4-90.8a32.07 32.07 0 00-30.2-21.2H358.6c-13.5 0-25.6 8.5-30.1 21.2L296 248H160c-44.2 0-80 35.8-80 80v456c0 44.2 35.8 80 80 80h704c44.2 0 80-35.8 80-80V328c0-44.2-35.8-80-80-80zm8 536c0 4.4-3.6 8-8 8H160c-4.4 0-8-3.6-8-8V328c0-4.4 3.6-8 8-8h186.7l17.1-47.8 22.9-64.2h250.5l22.9 64.2 17.1 47.8H864c4.4 0 8 3.6 8 8v456zM512 384c-88.4 0-160 71.6-160 160s71.6 160 160 160 160-71.6 160-160-71.6-160-160-160zm0 256c-53 0-96-43-96-96s43-96 96-96 96 43 96 96-43 96-96 96z"
                                    />
                                  </svg>
                                </span>
                                camera
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
                      >
                        <button
                          aria-controls="rc-tabs-test-more-popup"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          class="ant-tabs-nav-more"
                          id="rc-tabs-test-more"
                          style="visibility: hidden; order: 1;"
                          type="button"
                        >
                          <span
                            aria-label="ellipsis"
                            class="anticon anticon-ellipsis"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="ellipsis"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-tabs-extra-content"
                      >
                        <div>
                          Dummy MonitorTabExtraContent
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-tabs-content-holder"
                    >
                      <div
                        class="ant-tabs-content ant-tabs-content-top"
                      >
                        <div
                          aria-hidden="false"
                          aria-labelledby="rc-tabs-test-tab-FILE"
                          class="ant-tabs-tabpane ant-tabs-tabpane-active"
                          id="rc-tabs-test-panel-FILE"
                          role="tabpanel"
                          tabindex="0"
                        >
                          <div>
                            Dummy MonitorFilelist 
                            SD/test
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test Monitor should render correctly when isNorthAmerica 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 0px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="react-draggable"
              style="min-width: min(520px, 95vw); transform: translate(0px, 0px)translate(0px,0px);"
            >
              <div
                class="ant-modal-content"
              >
                <button
                  aria-label="Close"
                  class="ant-modal-close"
                  type="button"
                >
                  <span
                    class="ant-modal-close-x"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close ant-modal-close-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        fill-rule="evenodd"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <div
                  class="ant-modal-header"
                >
                  <div
                    class="ant-modal-title"
                    id="test-id"
                  >
                    <div
                      style="cursor: move; width: 100%;"
                    >
                      device - undefined
                    </div>
                  </div>
                </div>
                <div
                  class="ant-modal-body"
                >
                  <div
                    class="ant-tabs ant-tabs-top css-dev-only-do-not-override-hash"
                  >
                    <div
                      aria-orientation="horizontal"
                      class="ant-tabs-nav"
                      role="tablist"
                    >
                      <div
                        class="ant-tabs-nav-wrap"
                      >
                        <div
                          class="ant-tabs-nav-list"
                          style="transform: translate(0px, 0px);"
                        >
                          <div
                            class="ant-tabs-tab"
                            data-node-key="WORKING"
                          >
                            <div
                              aria-controls="rc-tabs-test-panel-WORKING"
                              aria-selected="false"
                              class="ant-tabs-tab-btn"
                              id="rc-tabs-test-tab-WORKING"
                              role="tab"
                              tabindex="-1"
                            >
                              <div>
                                <span
                                  aria-label="picture"
                                  class="anticon anticon-picture icon"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="picture"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 632H136v-39.9l138.5-164.3 150.1 178L658.1 489 888 761.6V792zm0-129.8L664.2 396.8c-3.2-3.8-9-3.8-12.2 0L424.6 666.4l-144-170.7c-3.2-3.8-9-3.8-12.2 0L136 652.7V232h752v430.2zM304 456a88 88 0 100-176 88 88 0 000 176zm0-116c15.5 0 28 12.5 28 28s-12.5 28-28 28-28-12.5-28-28 12.5-28 28-28z"
                                    />
                                  </svg>
                                </span>
                                taskTab
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-tabs-tab ant-tabs-tab-active"
                            data-node-key="FILE"
                          >
                            <div
                              aria-controls="rc-tabs-test-panel-FILE"
                              aria-selected="true"
                              class="ant-tabs-tab-btn"
                              id="rc-tabs-test-tab-FILE"
                              role="tab"
                              tabindex="0"
                            >
                              <div>
                                <span
                                  aria-label="folder"
                                  class="anticon anticon-folder icon"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="folder"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M880 298.4H521L403.7 186.2a8.15 8.15 0 00-5.5-2.2H144c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V330.4c0-17.7-14.3-32-32-32zM840 768H184V256h188.5l119.6 114.4H840V768z"
                                    />
                                  </svg>
                                </span>
                                label
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
                      >
                        <button
                          aria-controls="rc-tabs-test-more-popup"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          class="ant-tabs-nav-more"
                          id="rc-tabs-test-more"
                          style="visibility: hidden; order: 1;"
                          type="button"
                        >
                          <span
                            aria-label="ellipsis"
                            class="anticon anticon-ellipsis"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="ellipsis"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-tabs-extra-content"
                      >
                        <div>
                          Dummy MonitorTabExtraContent
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-tabs-content-holder"
                    >
                      <div
                        class="ant-tabs-content ant-tabs-content-top"
                      >
                        <div
                          aria-hidden="false"
                          aria-labelledby="rc-tabs-test-tab-FILE"
                          class="ant-tabs-tabpane ant-tabs-tabpane-active"
                          id="rc-tabs-test-panel-FILE"
                          role="tabpanel"
                          tabindex="0"
                        >
                          <div>
                            Dummy MonitorFilelist 
                            SD/test
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
